@startuml

interface Human<<interface>> {
    + void getColor()
    + void talk()
}

class BlackHuman

class WhiteHuman

class YellowHuman


abstract class AbstractHumanFactory {
    + Human createHuman()
}

class BlackHumanFactory {
}
class WhiteHumanFactory {
}
class YellowHumanFactory {
}



class NvWa

Human <-- NvWa
AbstractHumanFactory <-- NvWa

Human <|.. BlackHuman : 实现
Human <|.. WhiteHuman : 实现
Human <|.. YellowHuman : 实现

AbstractHumanFactory <|-- BlackHumanFactory : 继承
AbstractHumanFactory <|-- WhiteHumanFactory : 继承
AbstractHumanFactory <|-- YellowHumanFactory : 继承

Human <.. AbstractHumanFactory : 依赖


note left of AbstractHumanFactory : 抽象的八卦炉
note bottom of BlackHuman : 黑色人种
note bottom of WhiteHuman : 白色人种
note bottom of YellowHuman : 黄色人种

@enduml